src/objects/Apttus_Config2__IncentiveExclusion__c.object
<CustomObject>
    <description>Represents an incentive exclusion used to exclude one or more products, product groups, product families or product categories from incentive processing.</description>
    <fields>
        <fullName>Apttus_Config2__AccountScope__c</fullName>
        <description>One or more accounts associated with the incentive exclusion</description>
        <inlineHelpText>One or more accounts associated with the incentive exclusion</inlineHelpText>
        <label>Account Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AccountTypeScope__c</fullName>
        <description>One or more account types associated with the incentive exclusion</description>
        <inlineHelpText>One or more account types associated with the incentive exclusion</inlineHelpText>
        <label>Account Type Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the incentive exclusion is active</description>
        <inlineHelpText>Indicates whether the incentive exclusion is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CountryScope__c</fullName>
        <description>One or more countries associated with the incentive exclusion</description>
        <inlineHelpText>One or more countries associated with the incentive exclusion</inlineHelpText>
        <label>Country Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The incentive exclusion description</description>
        <inlineHelpText>The incentive exclusion description</inlineHelpText>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <defaultValue>DATE(2000,01,01)</defaultValue>
        <description>The incentive exclusion effective date. The incentive exclusion becomes effective on this date.</description>
        <inlineHelpText>The incentive exclusion effective date. The incentive exclusion becomes effective on this date.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <description>The incentive exclusion expiration date. The incentive exclusion becomes ineffective after this date.</description>
        <inlineHelpText>The incentive exclusion expiration date. The incentive exclusion becomes ineffective after this date.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListScope__c</fullName>
        <description>One or more price lists associated with the incentive exclusion</description>
        <inlineHelpText>One or more price lists associated with the incentive exclusion</inlineHelpText>
        <label>Price List Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamilyScope__c</fullName>
        <description>One or more product families associated with the incentive exclusion</description>
        <inlineHelpText>One or more product families associated with the incentive exclusion</inlineHelpText>
        <label>Product Family Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroupScope__c</fullName>
        <description>One or more product groups associated with the incentive exclusion</description>
        <inlineHelpText>One or more product groups associated with the incentive exclusion</inlineHelpText>
        <label>Product Group Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductScope__c</fullName>
        <description>One or more products associated with the incentive exclusion</description>
        <inlineHelpText>One or more products associated with the incentive exclusion</inlineHelpText>
        <label>Product Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RegionScope__c</fullName>
        <description>One or more regions associated with the incentive exclusion</description>
        <inlineHelpText>One or more regions associated with the incentive exclusion</inlineHelpText>
        <label>Region Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UseType__c</fullName>
        <description>The incentive use type</description>
        <inlineHelpText>The incentive use type</inlineHelpText>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promotion</fullName>
                    <default>true</default>
                    <label>Promotion</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Incentive Exclusion</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive Exclusions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>